@@ -1,20 +1,55 @@
-#!/bin/bash
-#Note: this scripts should be executed by user gda from i06-control
-#So after new installation, this file should be in /dls/i06_sw/software/gda/bin/remotestartupscript.sh
+#!/bin/bash -l
 
+. /usr/share/Modules/init/bash
+. /etc/profile.d/beamline.sh
+
+echo BEAMLINE defaults to $BEAMLINE
+echo SSH_ORIGINAL_COMMAND = $SSH_ORIGINAL_COMMAND
+
+BEAMLINE=$SSH_ORIGINAL_COMMAND
 CMD="$SSH_ORIGINAL_COMMAND"
 : ${CMD:="$*"}
 
-case "$CMD" in
-'i06-1') export BEAMLINE=i06-1;;
-*) export BEAMLINE=i06;;
-esac
+SOFTWAREFOLDER=dls_sw; export SOFTWAREFOLDER
+#OBJECT_SERVER_STARTUP_FILE=/$SOFTWAREFOLDER/$BEAMLINE/software/gda_versions/var/object_server_startup_server_main
+OBJECT_SERVER_STARTUP_FILE=/tmp/object_server_startup_server_i06
+rm -f $OBJECT_SERVER_STARTUP_FILE
 
-if [ -f "/etc/profile.d/modules.sh" ]; then
-    . /etc/profile.d/modules.sh
-fi
+export GDA_MODE=$BEAMLINE
+export GDA_ROOT=$(readlink -f $(dirname $0)/../../../../..)
+. $GDA_ROOT/workspace_git/gda-mt.git/configurations/mt-config/bin/gda_setup_env gda_servers_output
 
-. /dls_sw/$BEAMLINE/etc/gda_environment.sh
+umask 0002 # Some voodoo copied from GDA-mt/configurations/i16-config/bin/remotestartupscript.sh at d024aae
+# This should fix a problem where sub-directories created in a visit folder end up
+# with a different mask to the default.
 
-/dls_sw/$BEAMLINE/software/gda/bin/GDA_StartServers > /dls/$BEAMLINE/var/gda_output.txt 2>&1 &
+# Setting XX:MaxPermSize fixes the reset_namespace problem (due to Jython class leakage)
+export JAVA_OPTS="-Dgda.deploytype=1 -XX:MaxPermSize=1024m"
 
+GDA_CORE_SCRIPT_OPTIONS="--headless servers --debug"
+
+# i06 & i06-1 all share the same i06-config directory, so override the one from gda_setup_env
+export GDA_CONFIG=$GDA_ROOT/workspace_git/gda-mt.git/configurations/i06-config
+
+ARGS="--properties $GDA_CONFIG/properties/java.properties_$GDA_MODE"
+ARGS="--jacorb     $GDA_CONFIG/properties/jacorb_$GDA_MODE                $ARGS"
+ARGS="--jca        $GDA_CONFIG/properties/JCALibrary.properties_$GDA_MODE $ARGS"
+ARGS="--vardir     $GDA_ROOT/../var                                       $ARGS"
+ARGS="--logsdir    /dls/$BEAMLINE/logs                                    $ARGS"
+
+echo  $GDA_CORE_SCRIPT $GDA_CORE_SCRIPT_OPTIONS $ARGS
+echo  $GDA_CORE_SCRIPT $GDA_CORE_SCRIPT_OPTIONS $ARGS >> $GDA_CONSOLE_LOG
+nohup $GDA_CORE_SCRIPT $GDA_CORE_SCRIPT_OPTIONS $ARGS >> $GDA_CONSOLE_LOG  2>&1 &
+
+echo "Waiting for server startup completion:" $OBJECT_SERVER_STARTUP_FILE
+# look for the output file which will tell us when the servers have started
+while true; do
+  if [ -r $OBJECT_SERVER_STARTUP_FILE ]; then
+        echo .
+        rm -f $OBJECT_SERVER_STARTUP_FILE
+        exit 0
+  fi
+
+  sleep 1
+  echo -n .
+done
